Update Resume contact infos with Twitter & LinkedIn

--- a/Resume.tex
+++ b/Resume.tex
@@ -10,10 +10,11 @@
 
 \name{Aurélien}{STÉBÉ}
 \title{Senior Fullstack Software Engineer}
-\address{French Nationality}{}{Guadeloupe (UTC -4)}
+\address{France~-~Guadeloupe (UTC -4)}
 \email{Aurelien.Stebe@gmail.com}
-\social[github][github.com/AurelienStebe]{github.com/AurelienStebe}
-\social[linkedin][linkedin.com/in/Aurelien-Stebe-6a709856]{/Aurelien-Stebe-6a709856}
+\social[github][github.com/AurelienStebe]{GitHub.com/AurelienStebe}
+\social[twitter][twitter.com/AurelienStebe]{Twitter.com/AurelienStebe}
+\social[linkedin][linkedin.com/in/Aurelien-Stebe]{LinkedIn.com/AurelienStebe}
 
 \newcommand{\website}[2][]{\textcolor{color1}{\link[#1]{#2}}}
 \setlength{\hintscolumnwidth}{0.15\textwidth}
