Fix typos in new resume (small update)

--- a/Resume.tex
+++ b/Resume.tex
@@ -77,7 +77,7 @@
   Joined an expert Java consultancy serving telecom and airline sectors, which more than tripled in 5 years.
   \vspace{0.4em}
   \begin{itemize}
-    \item Participated in the challenging merge of two large customer support platforms (Orange Caraïbes \& Réunion).
+    \item Participated in the challenging merger of two large customer support platforms (Orange Caraïbes \& Réunion).
     \item Specialized in Unix Server administration and Travel Data analysis tooling for multiple airline companies.
   \end{itemize}
 }
@@ -95,7 +95,7 @@
   create standards\\and implementations for the open and seamless publication, discovery, and analysis of astronomical data.
   \vspace{0.4em}
   \begin{itemize}
-    \item Traveled with a team of 8 all over the world, giving talks in bi-annual conferences, leading workshops.
+    \item Traveled with a team of 8 all over the world, giving talks in biannual conferences, leading workshops.
     \item Worked in autonomy on the Resource Registry Working Group, nominated Vice-Chairman for 3 years.
     \item Released the first fully Harvestable and Searchable Registry, adopted as the \website[official Euro-VO Registry]{http://registry.euro-vo.org}.
   \end{itemize}
